[package]
name = "Hey"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version = "0.7.5", features = ["multipart", "ws"]}

socketioxide = {version = "0.14.1"}

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"

tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.6.7", features = ["codec", "io"] }
tower-http = { version = "0.5.1", features = ["full"] }
tower = "0.5.1"
futures = "0.3.3"
hyper = { version = "0.14", features = ["full"] }

sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls-ring", "postgres"] }

headers = "0.4"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

jsonwebtoken = "9.3"

names = { version = "0.14.0", default-features = false }

rand = "0.8.5"
